# IJustCalledTo-SayILoveYou

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/iplayer/: CMakeLists.txt  cli_ui.cpp  cli_ui.h  core.cpp  core.h  decoder.cpp  decoder.h  decoder_factory.cpp  decoder_factory.h  dummy_decoder.cpp  dummy_decoder.h  dummy_track_provider.cpp  dummy_track_provider.h  fs_track_provider.cpp  fs_track_provider.h  i_decoder.h  i_player_control.h  i_track_io.h  i_track_provider.h  i_user_interface.h  log.h  mad_decoder.cpp  mad_decoder.h  main.cpp  player.cpp  player.h  player_control.cpp  player_control.h  playlist.cpp  playlist.h  track_info.cpp  track_info.h  track_location.cpp  track_location.h  track_provider_resolver.cpp  track_provider_resolver.h
src/iplayer/player_control/: player_control.cpp  player_control.h
src/iplayer/ui/: cli_ui.cpp  cli_ui.h
src/iplayer/utils/: exec_queue.cpp  exec_queue.h  file_mapping.cpp  file_mapping.h  scope_guard.h
test/: CMakeLists.txt
test/iplayer/: CMakeLists.txt  cli_ui_mock.cpp  monkey_test.cpp  playlist_test.cpp  test_ui_main.h
